--- a/sparePartsStore/View/ViewSearchSpareParts.xaml
+++ b/sparePartsStore/View/ViewSearchSpareParts.xaml
@@ -5,11 +5,32 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:sparePartsStore.View"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+      xmlns:local1="clr-namespace:sparePartsStore.ViewModel"
       mc:Ignorable="d" 
       Title="" MinHeight="700" Height="Auto" MinWidth="1200" Width="Auto">
-    
+
+    <Page.Resources>
+        <local1:ListSearchSpareParts x:Key="ListSearchSpareParts"/>
+
+        <!--анимация при некорректом вводе-->
+        <Storyboard x:Key="FocusAnimation">
+            <ColorAnimation Storyboard.TargetProperty="Background.(SolidColorBrush.Color)"
+            From="#de6d6d" To="Transparent" Duration="0:0:3" AutoReverse="False"/>
+        </Storyboard>
+        <!--переопределяем анимацию подсветки textBox при наведении-->
+        <Style x:Key="CustomFilledTextBox" BasedOn="{StaticResource MaterialDesignFilledTextBox}" TargetType="TextBox">
+            <Style.Triggers>
+                <Trigger Property="IsFocused" Value="True">
+                    <Trigger.EnterActions>
+                        <BeginStoryboard Storyboard="{StaticResource FocusAnimation}"/>
+                    </Trigger.EnterActions>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Page.Resources>
+
     <!--страница посика запчастей-->
-    <Grid Background="White" Margin="50, 0, 50, 0" HorizontalAlignment="Center" MinWidth="1100">
+    <Grid Background="White" Margin="50, 0, 50, 0" HorizontalAlignment="Center" MinWidth="1100" DataContext="{StaticResource ListSearchSpareParts}">
 
         <!--стили-->
         <Grid.Resources>
@@ -61,30 +82,44 @@
 
                 <TextBox Grid.Column="0" x:Name="SearchParts" Height="50" Margin="0,0,0,0"
                          VerticalAlignment="Center"  HorizontalAlignment="Left"
-                         Text="{Binding InputLogin, UpdateSourceTrigger=PropertyChanged}"   
+                         Text="{Binding NameAutoParts, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                         TextChanged="TextBoxNameAutoParts" 
                          materialDesign:TextFieldAssist.HasClearButton="True"
                          Style="{StaticResource MaterialDesignOutlinedTextBox}" 
                          materialDesign:HintAssist.Hint="Поиск запчастей" 
                          materialDesign:TextFieldAssist.CharacterCounterVisibility="Hidden"
                          MaxLength="100" TextWrapping="Wrap" MinWidth="300" />
 
-                <ComboBox Grid.Column="1"
+                <ComboBox Grid.Column="1" IsReadOnly="True"
                          Width="190" Margin="10,0,0,0"
                          materialDesign:HintAssist.Hint="Марка" IsEditable="True"
+                         x:Name="CbCarBrand" DisplayMemberPath="NameCarBrand"
+                         SelectedItem="{Binding SelectedCarBrand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                         ItemsSource="{Binding NameCarBrandComboBoxItems, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                          Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
-                
-                <ComboBox Grid.Column="2"
+
+                <ComboBox Grid.Column="2" IsReadOnly="True"
                          Width="190" Margin="10,0,0,0"
+                         x:Name="CbCarModel" DisplayMemberPath="NameCarModel"
+                         SelectedItem="{Binding SelectedCarModel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                         ItemsSource="{Binding NameCarModelComboBoxItems, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                          materialDesign:HintAssist.Hint="Модель" IsEditable="True"
                          Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
-                
-                <ComboBox Grid.Column="3"
+
+                <ComboBox Grid.Column="3" IsReadOnly="True"
                          Width="190" Margin="10,0,0,0"
+                         x:Name="CbUnit" DisplayMemberPath="NameUnit"
+                         SelectedItem="{Binding SelectedUnit, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                         ItemsSource="{Binding NameUnitComboBoxItems, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                          materialDesign:HintAssist.Hint="Агрегат" IsEditable="True"
                          Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
-                
-                <ComboBox Grid.Column="4"
+
+                <ComboBox Grid.Column="4" IsReadOnly="True"
                          Width="190" Margin="10,0,0,0"
+                         x:Name="CbKnot"
+                         ItemsSource="{Binding NameKnotComboBoxItems, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                         SelectedItem="{Binding SelectedKnot, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                         DisplayMemberPath="NameKnot"
                          materialDesign:HintAssist.Hint="Узел" IsEditable="True"
                          Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
 
