кнопка сброса в поиске страниц

--- a/sparePartsStore/View/ViewSearchSpareParts.xaml
+++ b/sparePartsStore/View/ViewSearchSpareParts.xaml
@@ -56,7 +56,7 @@
 
         <!--кнопки-->
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="1" Margin="0,0,0,20">
-            <Button Grid.Column="0" Content="Сброс" MinWidth="150" Height="50" Background="Gray" BorderBrush="Black"/>
+            <Button Grid.Column="0" Content="Сброс" MinWidth="150" Height="50" Background="Gray" BorderBrush="Black" Click="Reloading"/>
 
             <Button Grid.Column="1" Content="Аналоги" MinWidth="150" Height="50" Background="Gray" BorderBrush="Black" Margin="10,0,0,0"/>
         </StackPanel>
