--- a/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListAnalogues.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListAnalogues.xaml
@@ -40,7 +40,7 @@
         <!--заголовок-->
         <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal">
             <TextBlock Text="Список аналогов для: " FontSize="30" Foreground="Black" FontWeight="DemiBold" Margin="0,40,0,40" VerticalAlignment="Center"/>
-            <TextBox Text="" x:Name="nameAutoParts" FontSize="30" Foreground="Black" FontWeight="DemiBold" Margin="0,40,0,40" VerticalAlignment="Center"/>
+            <TextBox x:Name="nameAutoParts" IsReadOnly="True" Text="{Binding Analog, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="30" Foreground="Black" FontWeight="DemiBold" Margin="0,40,0,40" VerticalAlignment="Center"/>
         </StackPanel>
         
         <!--таблица с подобранными аналогами-->
@@ -50,8 +50,8 @@
                     RowHeight="50" FontSize="10"
                     AutoGenerateColumns="False"
                     CellStyle="{StaticResource DataGridCellStyle}"
-                    ItemsSource="{Binding ListAutopartDPO}"
-                    SelectedItem="{Binding SelectedAutopart}"
+                    ItemsSource="{Binding ListAnalogDPO}"
+                    SelectedItem="{Binding SelectedAnalog}"
                     Style="{StaticResource MaterialDesignDataGrid}"
                     ColumnHeaderStyle="{StaticResource columnTableHeaderAutoParts}">
 
