--- a/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListAnalogues.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListAnalogues.xaml
@@ -37,6 +37,21 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
+        <!--возврат на главную-->
+        <Grid  Grid.Row="0" Grid.Column="1" Visibility="Visible" x:Name="closeFrame" Margin="0,50,50,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+
+            <!-- Верхняя часть экрана -->
+            <Grid HorizontalAlignment="Left" VerticalAlignment="Top">
+                <Button Content="Домой" Margin="50, 4, 0, 0" Padding="-20, -3, 0, 0" Width="100" Command="{Binding ClosePageAddOrDeleteCarBrands}" Click="ClosePageAddOrDeleteAutopart"  Background="Gray" BorderBrush="Black"/>
+                <materialDesign:PackIcon Kind="Home" Margin="120, 10, 0, 0" Width="20" Height="20"/>
+            </Grid>
+
+        </Grid>
+
         <!--заголовок-->
         <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal">
             <TextBlock Text="Список аналогов для: " FontSize="30" Foreground="Black" FontWeight="DemiBold" Margin="0,40,0,40" VerticalAlignment="Center"/>
@@ -90,7 +105,7 @@
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Row="0" Grid.Column="0" Content="Добавить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="50,0,0,0"/>
+            <Button Grid.Row="0" Grid.Column="0" Content="Добавить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="50,0,0,0"  IsEnabled="{Binding IsWorkButtonEnable}" Command="{Binding AddAnalog}"/>
 
             <TextBox Grid.Row="0" Grid.Column="1" x:Name="SearchParts" Height="50" Margin="20,0,0,0"
                          VerticalAlignment="Center" 
